// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BreadcrumbNav does not display address hover for native tokens 1`] = `
<DocumentFragment>
  <span
    class=""
    style="display: contents;"
  >
    <div
      aria-current="page"
      class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-row _gap-6px"
      data-testid="current-breadcrumb"
    >
      <h1
        class="font_body _display-inline _boxSizing-border-box _color-neutral1 _fontFamily-f-family _wordWrap-break-word _fontSize-inherit _lineHeight-inherit _fontWeight-inherit _whiteSpace-nowrap _mt-0px _mr-0px _mb-0px _ml-0px"
        data-disable-theme="true"
      >
        ETH
      </h1>
       
    </div>
    <div
      style="display: contents;"
    />
  </span>
</DocumentFragment>
`;

exports[`BreadcrumbNav renders hover components correctly 1`] = `
<DocumentFragment>
  <span
    class=""
    style="display: contents;"
  >
    <div
      aria-current="page"
      class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-row _gap-6px"
      data-testid="current-breadcrumb"
    >
      <h1
        class="font_body _display-inline _boxSizing-border-box _color-neutral1 _fontFamily-f-family _wordWrap-break-word _fontSize-inherit _lineHeight-inherit _fontWeight-inherit _whiteSpace-nowrap _mt-0px _mr-0px _mb-0px _ml-0px"
        data-disable-theme="true"
      >
        WBTC
      </h1>
       
      <div
        class="_color-_platformweb_neutral2 _whiteSpace-_platformweb_nowrap _display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-row _gap-10px _cursor-pointer"
        data-testid="breadcrumb-token-address"
      >
        0x2260...C599
      </div>
    </div>
    <div
      style="display: contents;"
    />
  </span>
</DocumentFragment>
`;
